[gd_scene load_steps=3 format=3 uid="uid://4bj7etivw784"]

[ext_resource type="Script" uid="uid://di4ee2clqc84g" path="res://scenes/battle/battle_map_manager_3d.gd" id="1_manager"]
[ext_resource type="PackedScene" uid="uid://byp8xytm75beo" path="res://scenes/ui/dialogue_box.tscn" id="2_x1cvm"]

[node name="BattleMap3D" type="Node3D"]
script = ExtResource("1_manager")

[node name="GridContainer" type="Node3D" parent="."]

[node name="UnitsContainer" type="Node3D" parent="."]

[node name="CameraRig" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)
fov = 50.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="BattleUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="PanelContainer" parent="UILayer/BattleUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="TopBarBg" type="ColorRect" parent="UILayer/BattleUI/TopBar"]
layout_mode = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="UILayer/BattleUI/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/BattleUI/TopBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TurnLabel" type="Label" parent="UILayer/BattleUI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Tour 1"

[node name="PhaseLabel" type="Label" parent="UILayer/BattleUI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Phase: Joueur"

[node name="CameraHint" type="Label" parent="UILayer/BattleUI/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "A/E: Rotation"

[node name="BottomBar" type="PanelContainer" parent="UILayer/BattleUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomBarBg" type="ColorRect" parent="UILayer/BattleUI/BottomBar"]
layout_mode = 2
color = Color(0.1, 0.1, 0.12, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="UILayer/BattleUI/BottomBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/BattleUI/BottomBar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="UnitInfoPanel" type="PanelContainer" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/UnitInfoPanel"]
layout_mode = 2

[node name="UnitNameLabel" type="Label" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/UnitInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Aucune unit√© s√©lectionn√©e"

[node name="HPLabel" type="Label" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/UnitInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "HP: --/--"

[node name="StatsLabel" type="Label" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/UnitInfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ATK: -- | DEF: -- | MOV: --"

[node name="ButtonsContainer" type="HBoxContainer" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EndTurnButton" type="Button" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Fin du Tour"

[node name="WaitButton" type="Button" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Attendre"

[node name="MenuButton" type="Button" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Menu"

[node name="UndoButton" type="Button" parent="UILayer/BattleUI/BottomBar/MarginContainer/HBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚Ü©Ô∏è Annuler"

[node name="ActionPopup" type="PopupPanel" parent="UILayer/BattleUI"]

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/BattleUI/ActionPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 184.0
offset_bottom = 344.0
theme_override_constants/separation = 10

[node name="MoveButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "üë£ D√©placer"

[node name="AttackButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "‚öî Attaquer"

[node name="DefendButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "üõ° D√©fendre"

[node name="AbilitiesButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "‚ú® Capacit√©s"

[node name="ItemsButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "üéí Objets"

[node name="WaitActionButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "‚è∏ Passer le tour"

[node name="CancelButton" type="Button" parent="UILayer/BattleUI/ActionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "‚úï Annuler"

[node name="DuoSelectionPopup" type="PopupPanel" parent="UILayer/BattleUI"]

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/BattleUI/DuoSelectionPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 372.0
offset_bottom = 142.0
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="UILayer/BattleUI/DuoSelectionPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "S√©lectionnez votre partenaire de duo :"
horizontal_alignment = 1

[node name="UnitsContainer" type="VBoxContainer" parent="UILayer/BattleUI/DuoSelectionPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SoloButton" type="Button" parent="UILayer/BattleUI/DuoSelectionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "üö∂ Attaquer Seul"

[node name="CancelDuoButton" type="Button" parent="UILayer/BattleUI/DuoSelectionPopup/VBoxContainer"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
text = "‚úï Annuler"

[node name="DialogueBox" parent="UILayer" instance=ExtResource("2_x1cvm")]
